# scancontext-cpp

./: README.md  do_build.sh  main.cpp
backup/3 rotating and calc cossim disp ver/: CMakeLists.txt  do_build.sh  main.cpp
backup/3 rotating and calc cossim disp ver/include/: scancontext.h  utils.h
backup/3 rotating and calc cossim disp ver/src/: scancontext.cpp  utils.cpp
include/: pointcloud.h  utils.h
src/: scancontext.cpp
